--- a/package.json
+++ b/package.json
@@ -26,16 +26,27 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.1",
+    "node-sass": "^7.0.1",
     "sass-loader": "^12.4.0",
+    "style-loader": "^3.3.1",
     "stylelint": "^14.5.0",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.2",
+    "axios": "^0.24.0",
+    "axios-hooks": "^3.0.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-sass": "^3.4.1",
+    "d3-shape": "^3.1.0",
+    "install": "^0.13.0",
+    "npm": "^8.5.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2"
   }
 }
