--- a/package.json
+++ b/package.json
@@ -44,13 +44,17 @@
     "axios-hooks": "^3.0.0",
     "bootstrap": "^5.1.3",
     "bootstrap-sass": "^3.4.1",
+    "chart.js": "^3.7.1",
     "d3-shape": "^3.1.0",
     "install": "^0.13.0",
     "npm": "^8.5.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
+    "react-chartjs-2": "^3.1.0",
+    "react-charts": "^3.0.0-beta.35",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "victory": "^36.3.0"
   }
 }
